Fixed missing anchor tag and removed extra div.

--- a/fcindex.html
+++ b/fcindex.html
@@ -33,7 +33,7 @@
     <header>
       <nav class="bottom">
         <ul>
-    <li><a href="fcindex.html">AIR JORDANS</li>
+    <li><a href="fcindex.html">AIR JORDANS</a></li>
     <li><a href="fcindex.html">NIKE</a></li>
     <li><a href="fcindex.html">ADIDAS</a></li>
     <li><a href="fcindex.html">YEEZY</a></li>
@@ -49,7 +49,6 @@
     <div class="showcase">
   <Img src='images2.png' width=1155px height=555>
     </div>
-  </div>
 
 
 <div class="topsell">
